--- a/pdfconfigs/titlepage.html
+++ b/pdfconfigs/titlepage.html
@@ -10,11 +10,11 @@ permalink: /titlepage.html/
     <hr />
 
     <div class="printTitleImage">
-        <img src="{{site.url}}/{{site.baseurl}}/images/company_logo_big.png" alt="Company Logo"/>
+        <img src="{{site.url}}/{{site.baseurl}}/images/book.png" alt="Logo com ilustração com 3 livros empilhados"/>
     </div>
 
     <div class="copyrightBoilerplate">
-        <p>&copy; {{ site.time | date: "%Y" }} {{site.company_name}}. This is a boilerplate copyright statement... All rights reserved. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the publisher, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law.
+        <p>&copy; {{ site.time | date: "%Y" }} {{site.company_name}}. Licença para o site <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />O trabalho <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">AcessoPédia</span> de <a xmlns:cc="http://creativecommons.org/ns#" href="www.acessopedia.wiki.br" property="cc:attributionName" rel="cc:attributionURL">Colaboradores do AcessoPédia</a> está licenciado com uma Licença <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons - Atribuição-NãoComercial-CompartilhaIgual 4.0 Internacional</a>.<br />Baseado no trabalho disponível em <a xmlns:dct="http://purl.org/dc/terms/" href="www.acessopedia.wiki.br" rel="dct:source">www.acessopedia.wiki.br</a>.<br />Podem estar disponíveis autorizações adicionais às concedidas no âmbito desta licença em <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/acessopedia/acessopedia.github.io" rel="cc:morePermissions">https://github.com/acessopedia/acessopedia.github.io</a>.
         </p>
 
     </div>
